fixed phone overflow problem, added svg to header

--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -42,7 +42,8 @@ footer {
       text-align: center;
       width: 415px;
 
-      font-size: 1.813rem;
+      //font-size: 1.813rem;
+      font-size: 1.5vw;
 
 
       color: $primaryWhite;
@@ -55,7 +56,8 @@ footer {
           width: 315px;
         }
 
-        font-size: 2.438rem;
+        //font-size: 2.438rem;
+        font-size: 2.1vw;
       }
 
       &.soc-media {
