--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -10,7 +10,7 @@ header {
     align-items: center;
     gap: 10px;
 
-    color: $orangeText700;
+    color: $primaryBlack;
     font-size: 1.5rem;
     font-weight: 700;
   }
